Bug 250439 - Notifications/Reminders do not work
Summary: Notifications/Reminders do not work
Status: CLOSED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-07 13:13 UTC by Felix Wolfsteller
Modified: 2010-10-15 09:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-07 13:13:08 UTC
For Appointments, Notifications can be created.
These seem to have no effect.

To reproduce:

* Create an appointment 10 Minutes ahead (6 if you are quick)
* In the "more" flap under the alarm clock section, add one or more notification(s) "5 minutes before start".
* Wait the appropriate time.

It is expected that some sort of dialog or notification appears.
Comment 1 Volker Krause 2010-09-29 13:20:58 UTC
SVN commit 1180906 by vkrause:

Start the reminder daemon.

BUG: 250439


 M  +3 -0      calendar/mainview.cpp  
 M  +3 -0      tasks/mainview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180906
Comment 2 Felix Wolfsteller 2010-10-01 13:38:59 UTC
With version 4:4.5~20101001.1181430-1maemo1.1181463 , I am unable to notice the notifications/reminders .
Comment 3 Volker Krause 2010-10-01 14:06:08 UTC
SVN commit 1181578 by vkrause:

Actually install korgac.

BUG: 250439


 M  +2 -2      control  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1181578
Comment 4 Felix Wolfsteller 2010-10-15 09:55:40 UTC
Confirming, text notifications do work in version 4:4.5~20101014.1185761-1maemo1.1185672.