Start the reminder daemon.

BUG: 250439

svn path=/trunk/KDE/kdepim/mobile/; revision=1180906